new use case to login and register
